fix jumping checkbox in tables (#1574)
* fix jumping checkbox in tables

* don't show scrollbars on radios and checks even when set to always in browser

--- a/component-lib/app/styles/component-lib/base/content/_data-table.scss
+++ b/component-lib/app/styles/component-lib/base/content/_data-table.scss
@@ -83,14 +83,6 @@ $data-table-max-z-index: 1000 !default; /* should be larger than the total # of 
   &-header-row {
     white-space: nowrap;
     position: relative;
-
-    .rsa-form-checkbox-label {
-      margin: 0;
-
-      &::before {
-        top: 1px;
-      }
-    }
   }
 
   &-header-row {
@@ -117,14 +109,6 @@ $data-table-max-z-index: 1000 !default; /* should be larger than the total # of 
 
       + .rsa-data-table-body-row {
         border-top: 1px solid transparent;
-      }
-
-      .rsa-form-checkbox-label {
-        display: block;
-
-        &::before {
-          top: 3px;
-        }
       }
     }
 
