--- a/component-lib/app/styles/component-lib/base/form/_form-checkbox.scss
+++ b/component-lib/app/styles/component-lib/base/form/_form-checkbox.scss
@@ -2,6 +2,7 @@
   position: relative;
   display: inline-flex;
   align-items: center;
+  overflow: hidden;
 
   .rsa-form-checkbox {
     align-self: flex-start;
