--- a/component-lib/app/styles/component-lib/base/form/_form-radio.scss
+++ b/component-lib/app/styles/component-lib/base/form/_form-radio.scss
@@ -2,6 +2,7 @@
   position: relative;
   display: inline-flex;
   align-items: center;
+  overflow: hidden;
 
   input {
     align-self: flex-start;
